Bug 1405544 - Propagate existing bits to the parent element as well when switch the restyle root for invalidation siblings in post-traversal. r=emilio

MozReview-Commit-ID: 8Rmg2FSytlp

--HG--
extra : rebase_source : 9c61187b6d9879383c531e630490c92fb5ec8745